--- a/next-js-demo-app/Dockerfile
+++ b/next-js-demo-app/Dockerfile
@@ -1,26 +1,27 @@
-FROM node:24-alpine AS builder
+FROM node:20-alpine AS builder
 WORKDIR /app
 COPY package*.json .
-RUN npm ci --omit=dev
+RUN npm ci
 COPY . .
 RUN npm run build
 
-FROM builder AS production
+FROM node:20-alpine AS production
 
 WORKDIR /app
 
-# RUN addgroup -g 1001 -S nodejs && \
-#     adduser -S nextjs -u 1001 && \
-#     chown -R nextjs:nodejs /app
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nextjs -u 1001 && \
+    chown -R nextjs:nodejs /app
 
-# USER nextjs
+USER nextjs
 
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package*.json ./package*.json
-COPY --from=builder /app/public ./public
+COPY --from=builder /app/.next/standalone ./
+COPY --from=builder /app/package*.json ./
+
+COPY --from=builder /app/.next/static ./.next/static
+COPY --from=builder /app/public /app/public
 
 EXPOSE 3000
 
-CMD ["npm", "start"]
+CMD ["node", "server.js"]
 
