--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline for Next.js App
 
 on:
   push:
@@ -6,32 +6,31 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: next-js-demo-app
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Set Up Node.job
+    - name: Set Up Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: 18
+        node-version: 20
         cache: 'npm'
         cache-dependency-path: next-js-demo-app/package-lock.json
     
     - name: Install Dependencies
-      run: |
-        cd next-js-demo-app
-        npm ci
+      run: npm ci
     - name: Linting
-      run: | 
-        cd next-js-demo-app
-        npm run lint 
-      
+      run: npm run lint
+
+
     - name: Building
-      run: |
-        cd next-js-demo-app
-        npm run build
+      run: npm run build
 
     - name: Login to GHCR
       uses: docker/login-action@v3
@@ -41,9 +40,9 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Docker Build
-      run : docker build -t ghcr.io/${{github.repository}}:${{github.sha}} -f next-js-demo-app/Dockerfile next-js-demo-app
+      run : docker build -t ghcr.io/${{github.repository}}/next-js-demo-app:${{github.sha}} .
 
     - name: Push Image
       run: |
-        docker push ghcr.io/${{github.repository}}:${{github.sha}}
+        docker push ghcr.io/${{github.repository}}/next-js-demo-app:${{github.sha}}
     
